@@ -2,6 +2,8 @@ package co.com.anfega.r2dbc;
 
 import co.com.anfega.model.ability.Ability;
 import co.com.anfega.model.ability.gateways.AbilityRepository;
+import co.com.anfega.model.common.PageResponse;
+import co.com.anfega.model.common.PaginationHelper;
 import co.com.anfega.model.technology.Technology;
 import co.com.anfega.r2dbc.entity.AbilityEntity;
 import co.com.anfega.r2dbc.helper.ReactiveAdapterOperations;
@@ -11,6 +13,7 @@ import reactor.core.publisher.Mono;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Repository
@@ -54,9 +57,42 @@ public class MyReactiveRepositoryAdapter extends ReactiveAdapterOperations<
                         savedData.getTechnologies() != null && !savedData.getTechnologies().isEmpty()
                                 ? Arrays.stream(savedData.getTechnologies().split(","))
                                 .map(name -> new Technology(name, null))
-                                .collect(Collectors.toList())
+                                .toList()
                                 : new ArrayList<>()
                 ));
     }
+
+    @Override
+    public Mono<PageResponse<Ability>> findAllPaginated(int page, int size, String sortBy, String direction) {
+        return repository.findAll()
+                .map(this::toAbility)
+                .collectList()
+                .map(list -> paginateAndSortAbilities(list, page, size, sortBy, direction));
+    }
+
+    private Ability toAbility(AbilityEntity entity) {
+        List<Technology> technologies = (entity.getTechnologies() != null && !entity.getTechnologies().isEmpty())
+                ? Arrays.stream(entity.getTechnologies().split(","))
+                .map(name -> new Technology(name, name))
+                .toList()
+                : java.util.Collections.emptyList();
+        return new Ability(entity.getId(), entity.getName(), entity.getDescription(), technologies);
+    }
+
+    private PageResponse<Ability> paginateAndSortAbilities(
+            java.util.List<Ability> list, int page, int size, String sortBy, String direction) {
+        final String TECHNOLOGIES_COUNT = "technologiesCount";
+        switch (sortBy == null ? "" : sortBy.toLowerCase()) {
+            case TECHNOLOGIES_COUNT:
+                return PaginationHelper.paginateAndSort(list, page, size, direction, a -> a.getTechnologies().size());
+            case "name":
+                return PaginationHelper.paginateAndSort(list, page, size, direction, Ability::getName);
+            case "description":
+                return PaginationHelper.paginateAndSort(list, page, size, direction, Ability::getDescription);
+            default:
+                return PaginationHelper.paginateAndSort(list, page, size, direction, a -> String.valueOf(a.getId()));
+        }
+    }
+
 
 }
